--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@ layout: default
 
 <main class="home" id="post" role="main" itemprop="mainContentOfPage" itemscope="itemscope" itemtype="http://schema.org/Blog">
     <div>
+        <div class="isa_info" style="text-align: center">
+            <i class="fa fa-info-circle"></i>
+            New tutorials apps! Spring Boot and Angular Material: <a href="http://molteni.io">molteni.io</a> and Java EE 8, Angular and Bootstrap : <a href="http://javademo.io">javademo.io</a>
+        </div>
+    </div>
+    <div>
         <div class="isa_warning" style="text-align: center">
             <i class="fa fa-info-circle"></i>
             {{site.warning}}
