--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
     <div>
         <div class="isa_info" style="text-align: center">
             <i class="fa fa-info-circle"></i>
-            New tutorials apps! Spring Boot and Angular Material: <a href="http://molteni.io">molteni.io</a> and Java EE 8, Angular and Bootstrap : <a href="http://javademo.io">javademo.io</a>
+            New tutorials apps! Java EE, Spring, Angular, Material Design, Bootstrap : <a href="http://javademo.io">javademo.io</a>
         </div>
     </div>
     <div>
