--- a/index.html
+++ b/index.html
@@ -6,13 +6,7 @@ layout: default
     <div>
         <div class="isa_info" style="text-align: center">
             <i class="fa fa-info-circle"></i>
-            New tutorials apps! Java EE, Spring, Angular, Material Design, Bootstrap : <a href="http://javademo.io">javademo.io</a>
-        </div>
-    </div>
-    <div>
-        <div class="isa_warning" style="text-align: center">
-            <i class="fa fa-info-circle"></i>
-            {{site.warning}}
+            Angular and Java in practice (demo): <a href="http://javademo.io">javademo.io</a>
         </div>
     </div>
     <br>
