--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@ layout: default
             <i class="fa fa-info-circle"></i>
             Angular and Java in practice (demo): <a href="http://javademo.io">javademo.io</a>
         </div>
+
+        <div class="isa_info" style="text-align: center">
+            <i class="fa fa-info-circle"></i>
+            This blog is moving to ngJava.com : <a href="https://www.ngjava.com">More Angular and more Spring are coming ...</a>
+        </div>
     </div>
     <br>
     <div id="grid" class="row flex-grid">
