--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
 
         <div class="isa_info" style="text-align: center">
             <i class="fa fa-info-circle"></i>
-            This blog is moving to ngJava.com : <a href="https://www.ngjava.com">More Angular and more Spring are coming ...</a>
+            This blog is moving to ngJava.com (you could be redirected) : <a href="https://www.ngjava.com">More Angular and more Spring are coming ...</a>
         </div>
     </div>
     <br>
