--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ layout: default
 
         <div class="isa_info" style="text-align: center">
             <i class="fa fa-info-circle"></i>
-            This blog is moving to ngJava.com (you could be redirected) : <a href="https://www.ngjava.com">More Angular and more Spring are coming ...</a>
+            This blog is moving to ngJava.com (you could be redirected) : <a href="https://www.ngjava.com">More about Angular, Spring and the cloud is coming ...</a>
+            <br>From September 2018 the new articles will be published only on the new platform.</br>
         </div>
     </div>
     <br>
