--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ layout: default
 
 <main class="home" id="post" role="main" itemprop="mainContentOfPage" itemscope="itemscope" itemtype="http://schema.org/Blog">
     <div>
-        <div class="isa_info" style="text-align: center">
+       <!-- <div class="isa_info" style="text-align: center">
             <i class="fa fa-info-circle"></i>
             Angular and Java in practice (demo): <a href="http://javademo.io">javademo.io</a>
-        </div>
+        </div>-->
     </div>
     <br>
     <div id="grid" class="row flex-grid">
