--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
     <br>
     <div id="grid" class="row flex-grid">
     {% for post in site.posts %}
-        <article  data-url="{{ post.url | prepend: site.baseurl }}" class="box-item post-{{post.main-class}}" style="min-height: 0" itemscope="itemscope" itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
+        <article  data-url="{{ post.url | prepend: site.baseurl }}" class="box-item post-{{post.main-class}}" style="min-height: 0; margin-bottom: 20px" itemscope="itemscope" itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
                 <span class="ribbon">
                     <a href="{{site.url}}{{site.baseurl}}/category/{{post.main-class}}"><span>{{post.main-class}}</span></a>
                 </span>
